feat: multi file editor
Implement new interface for multifile editor